--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 = Description
   A Ruby module that can make your classes final. A final class cannot
-  be subclassed, and its methods cannot be redefined.
+  be subclassed, and its instance methods cannot be redefined.
 
 = Synopsis
   require 'final'
@@ -41,6 +41,22 @@
   production code. Freezing a class this way is contrary to the very nature
   of Ruby and dynamic languages in general. If you're going to use it, you had
   better have a very good reason for doing so!
+
+= Caveats
+  Only instance methods are prevented from redefinition. Singleton methods are
+  not final. This change may happen in a future release.
+
+= License
+  Artistic 2.0
+
+= Copyright
+  (C) 2003-2011 Daniel J. Berger
+  All Rights Reserved.`
+
+= Warranty
+  This package is provided "as is" and without any express or
+  implied warranties, including, without limitation, the implied
+  warranties of merchantability and fitness for a particular purpose.
 
 = Author
   Daniel J. Berger
