--- a/README
+++ b/README
@@ -51,7 +51,7 @@
 
 = Copyright
   (C) 2003-2014 Daniel J. Berger
-  All Rights Reserved.`
+  All Rights Reserved.
 
 = Warranty
   This package is provided "as is" and without any express or
